Shrunk the graph

--- a/index.html
+++ b/index.html
@@ -2,354 +2,9 @@
 layout: default
 ---
 
-<script type="text/javascript">
+{% include script.html %}
 
-var Calculator = function() {
-
-  this.restrooms = 10;
-  this.fixturesPerRestroom = 9;
-  this.laborRate = 10.00;
-  this.cartStorage = 1;
-  this.disinfectantCost = 25.00;
-  this.cleaningDaysPerWeek = 7;
-  this.shiftsPerDay = 1;
-
-  this.links = {};
-
-  var minutesToDisinfect = 3;
-  var minutesForRestroom = 1.5;
-
-  var coverageForMopBucket = 1000;
-  var averageSizePerRestroomFixture = 26;
-
-  var waterConservation = 0.7;
-  var chemicalDilution = 2;
-
-  this.money = function (number, n, x) {
-    n = n || 2;
-    var re = '\\d(?=(\\d{' + (x || 3) + '})+' + (n > 0 ? '\\.' : '$') + ')';
-    return number.toFixed(Math.max(0, ~~n)).replace(new RegExp(re, 'g'), '$&,');
-  }
-
-  this.getToolsWeeklyLaborCost = function() {
-    var num = (this.restrooms * this.fixturesPerRestroom * minutesToDisinfect * (this.laborRate / 60) * this.cleaningDaysPerWeek * this.shiftsPerDay);
-
-    return num;
-  }
-
-  this.getRestroomWeeklyLaborCost = function() {
-    var num = (this.restrooms * this.fixturesPerRestroom * minutesForRestroom * (this.laborRate / 60) * this.cleaningDaysPerWeek * this.shiftsPerDay);
-
-    return num;
-  }
-
-  this.getToolsWeeklyWaterCost = function () {
-    var num = ( ((this.fixturesPerRestroom * this.restrooms * averageSizePerRestroomFixture) / coverageForMopBucket ) * 6 * this.cleaningDaysPerWeek * this.shiftsPerDay );
-
-    return num;
-  }
-
-  this.getRestroomWeeklyWaterCost = function () {
-    var num = ( this.getToolsWeeklyWaterCost() * (1 - waterConservation) );
-
-    return num;
-  }
-
-  this.getToolsWeeklyChemicalsCost = function () {
-    var num = ( (this.getToolsWeeklyWaterCost() * 2) * (this.disinfectantCost * 0.0078125) );
-
-    return num;
-  }
-
-  this.getRestroomWeeklyChemicalsCost = function () {
-    var num =  ( (this.getRestroomWeeklyWaterCost() * 2) * (this.disinfectantCost * 0.0078125) );
-
-    return num;
-  }
-
-  this.getAnnualLaborSavings = function () {
-    var num = (this.getToolsWeeklyLaborCost() - this.getRestroomWeeklyLaborCost()) * 52;
-    return num;
-  }
-
-  this.getAnnualWaterSavings = function () {
-    var num = ( (this.getToolsWeeklyWaterCost() - this.getRestroomWeeklyWaterCost() ) * 52);
-    return num;
-  }
-
-  this.getAnnualChemicalsSavings = function () {
-    var num = ( (this.getToolsWeeklyChemicalsCost() - this.getRestroomWeeklyChemicalsCost() ) * 52 );
-    return num;
-  }
-
-  this.getAnnualStorageSavings = function () {
-    var num = ( ( (this.laborRate / 60) * 15) * this.cleaningDaysPerWeek * 52 * this.cartStorage * this.shiftsPerDay );
-    return num;
-  }
-
-  this.link = function (obj) {
-    this.links = obj;
-
-    var that = this;
-
-    for (var name in obj) {
-      var elem = jQuery('#' + obj[name]);
-      elem.change(function() {
-
-        var input = jQuery(this);
-
-        var id = input.attr('id');
-
-        var key = false;
-
-        for (var prop in that.links) {
-          if (that.links.hasOwnProperty(prop)) {
-            if (that.links[prop] == id) {
-              key = prop;
-              break;
-            }
-          }
-        }
-
-        if (!key) return;
-
-        switch (key) {
-          case 'restrooms':
-            that.restrooms = parseInt(input.val());
-            break;
-          case 'fixturesPerRestroom':
-            that.fixturesPerRestroom = parseInt(input.val());
-            break;
-          case 'laborRate':
-            that.laborRate = parseFloat(input.val());
-            break;
-          case 'cartStorage':
-            that.cartStorage = input.val() == 0 ? 0 : 1;
-            break;
-          case 'disinfectantCost':
-            that.disinfectantCost = parseFloat(input.val());
-            break;
-          case 'cleaningDaysPerWeek':
-            that.cleaningDaysPerWeek = parseInt(input.val());
-            break;
-          case 'shiftsPerDay':
-            that.shiftsPerDay = parseInt(input.val());
-            break;
-        }
-
-        that.propagate();
-      });
-    }
-  }
-
-}
-
-Calculator.prototype.getPixelWidth = function(currentDollars, maxValue) {
-  var graphHeight = jQuery('.Graph--Background').height();
-  var max = maxValue || 10000; //Default monetary max
-
-  var pixelsPerDollar = graphHeight / max;
-
-  var x = currentDollars * pixelsPerDollar;
-  x = parseInt(x);
-
-  var effectiveMax = (graphHeight - 41);
-
-  if (x > effectiveMax) {
-    x = effectiveMax;
-  }
-
-  return x;
-
-}
-
-Calculator.prototype.propagate = function () {
-
-  for (var name in this.links) {
-    // Iterate through, go from name to name, and put the proper value in its place
-    var element = jQuery('#' + this.links[name]);
-
-    if (!element) continue;
-    var cost = false;
-
-    switch (name) {
-      case 'weeklyToolsLabor':
-        element.text(this.money(this.getToolsWeeklyLaborCost()));
-        break;
-      case 'weeklyRestroomLabor':
-        element.text(this.money(this.getRestroomWeeklyLaborCost()));
-        break;
-      case 'weeklyToolsWater':
-        element.text(this.money(this.getToolsWeeklyWaterCost()));
-        break;
-      case 'weeklyRestroomWater':
-        element.text(this.money(this.getRestroomWeeklyWaterCost()));
-        break;
-      case 'weeklyToolsChemicals':
-        element.text(this.money(this.getToolsWeeklyChemicalsCost()));
-        break;
-      case 'weeklyRestroomChemicals':
-        element.text(this.money(this.getRestroomWeeklyChemicalsCost()));
-        break;
-      case 'annualLaborSavings':
-        //element
-        cost = this.getAnnualLaborSavings();
-      case 'annualWaterSavings':
-        if (!cost) cost = this.getAnnualWaterSavings();
-      case 'annualChemicalSavings':
-        if (!cost) cost = this.getAnnualChemicalsSavings();
-
-        var newHeight = this.getPixelWidth(cost);
-        jQuery('.Graph--Amount', element).text('$' + this.money(cost, 0, 0));
-        element.css('height', newHeight + 'px');
-        break;
-    }
-
-  }
-}
-
-var calc = new Calculator();
-
-</script>
-
-<style type="text/css">
-
-.calculator fieldset {
-  border: 2px solid #c9c8c9;
-  border-left: 0;
-  border-right: 0;
-  border-bottom: 0;
-
-  margin-top: 24px;
-}
-
-.calculator legend {
-  display: block;
-  margin: 0 auto;
-
-  font-style: italic;
-  padding-left: 4px;
-  padding-right: 4px;
-  font-size: 14px;
-  color: black;
-}
-
-.calculator--left {
-  display: 320px;
-  float: left;
-}
-
-.calculator--right {
-  width: 339px;
-  float: right;
-}
-
-.calculator--bottom {
-  clear: both;
-}
-
-.graph-content {
-  background-color: #e7e7e8;
-}
-
-.input--calculator {
-  background-color: #e7e7e8;
-  color: black;
-  font-size: 14px;
-  line-height: 20px;
-  height: 20px;
-  padding: 2px 7px;
-
-  width: 96px;
-  margin-bottom: 18px;
-
-  border-radius: 0px;
-}
-
-.calculator--table {
-
-}
-
-.calculator--table tr td:first-child {
-  text-align: right;
-  padding-right: 6px;
-  line-height: 20px;
-  font-weight: bold;
-  color: black;
-}
-
-.calculator h3 {
-  color: white;
-  text-transform: uppercase;
-  color: white;
-  background-color:#6d6e71;
-  text-align: center;
-  font-size: 17px;
-  line-height: 26px;
-  height: 26px;
-
-  margin: 8px 0;
-}
-
-.calculator h3.green {
-  background-color: #009e58;
-}
-
-.calculator--weekly-savings {
-  border: 2px solid #009e58;
-  padding: 0px 0px 14px;
-}
-
-.calculator--weekly-savings h3 {
-  margin-top: 0;
-}
-
-.calculator-green-box {
-  background-color: #c9e5d5;
-}
-
-.calculator-gray-box {
-  background-color: #e7e7e8;
-}
-
-.calculator-gray-box, .calculator-green-box {
-  height: 20px;
-  display: block;
-  text-align: left;
-  color: black;
-  line-height: 20px;
-
-  padding: 0 4px;
-
-  margin-bottom: 6px;
-  margin: 6px 7px;
-}
-
-.calculator--relative {
-  position: relative;
-}
-
-.calculator--relative:after {
-  display: block;
-  height: 1px;
-  clear: both;
-}
-
-.graph-content {
-  width: 338px;
-  margin-left: 1px;
-  min-height: 620px;
-  background-color: #e7e7e8;
-}
-
-.calculator--weekly-savings {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  background-color: white;
-}
-
-</style>
+{% include style.html %}
 
 <div class="calculator">
 
