--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ layout: default
       </table>
 
       <div class="calculator--weekly-savings">
-        <h3 class="green">Weekly Cost Savings</h3>
+        <h3 class="green">Weekly Savings</h3>
         <table class="calculator--table">
           <tr>
             <th></th>
@@ -68,15 +68,15 @@ layout: default
           </tr>
 
           <tr>
-            <td width="125" style="text-align: right; padding-right: 8px; line-height:32px;"><span class="label">Water (Gallons): </span></td>
-            <td width="72"><span id="CalculatorToolsWaterValue" class="calculator-gray-box"></span></td>
-            <td width="72"><span id="CalculatorRestroomWaterValue" class="calculator-green-box"></span></td>
-          </tr>
-
-          <tr>
             <td width="125" style="text-align: right; padding-right: 8px; line-height:32px;"><span class="label">Chemicals: </span></td>
             <td width="72"><span id="CalculatorToolsChemicalsValue" class="calculator-gray-box"></span></td>
             <td width="72"><span id="CalculatorRestroomChemicalsValue" class="calculator-green-box"></span></td>
+          </tr>
+
+          <tr>
+            <td width="125" style="text-align: right; padding-right: 8px; line-height:32px;"><span class="label">Water (Gallons): </span></td>
+            <td width="72"><span id="CalculatorToolsWaterValue" class="calculator-gray-box"></span></td>
+            <td width="72"><span id="CalculatorRestroomWaterValue" class="calculator-green-box"></span></td>
           </tr>
 
         </table>
