Some content changes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@ layout: default
 
   <div class="calculator--relative">
 
+    <p style="margin-bottom: 10px;">Compare the cost of cleaning restrooms with Unger's BETTERx Cleaning Specialist System vs. traditional tools.</p>
+
     <div class="calculator--left">
 
       <h1>ROI Calculator</h1>
@@ -112,6 +114,10 @@ layout: default
       </div>
 
     </fieldset>
+
+    <p>
+      <em>Data from the ISSA 612 Cleaning Times. Chemical dilution and square footage are estimates only.</em>
+    </p>
 
   </div>
 
